--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^9.8.6",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.11.1",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2"
   }
